--- a/Bigstore.com/Views/Partials/SliderPartial.cshtml
+++ b/Bigstore.com/Views/Partials/SliderPartial.cshtml
@@ -3,8 +3,8 @@
         <div class="banner-info">
             <h3>Sərfəli qiymət. Yüksək kefiyyət </h3>
             <div class="search-form">
-                <form action="#" method="post">
-                    <input type="text" placeholder="Məhsul axtar..." name="Search...">
+                <form action="/Home/Index/" method="post">
+                    <input type="text" placeholder="Məhsul axtar..." name="Search">
                     <input type="submit" value=" ">
                 </form>
             </div>
