--- a/Bigstore.com/Views/Partials/NavBarPartial.cshtml
+++ b/Bigstore.com/Views/Partials/NavBarPartial.cshtml
@@ -4,7 +4,7 @@
     <div class="container">
 
         <div class="logo">
-            <h1><a href="index.html">Big Store<span>Onlayn Super Marketi</span></a></h1>
+            <h1><a href="/Home/Index/">Big Store<span>Onlayn Super Market</span></a></h1>
         </div>
         <div class="head-t"></div>
 
