--- a/Bigstore.com/Views/Contact/Index.cshtml
+++ b/Bigstore.com/Views/Contact/Index.cshtml
@@ -41,11 +41,11 @@
                     <div id="parentHorizontalTab">
                         <div class="resp-tabs-container hor_1">
                             <div>
-                                <form action="#" method="post">
-                                    <input type="text" value="Name" name="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}" required="">
-                                    <input type="email" value="Email" name="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
-                                    <textarea name="Message..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message...';}" required="">Message...</textarea>
-                                    <input type="submit" value="Submit">
+                                <form action="/Contact/Add/" method="post">
+                                    <input type="text"  name="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}" required="">
+                                    <input type="email" name="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
+                                    <textarea name="Text" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message...';}" required="">Message...</textarea>
+                                    <input type="submit" value="Göndər">
                                 </form>
                             </div>
 
