--- a/Bigstore.com/Views/Partials/FooterPartial.cshtml
+++ b/Bigstore.com/Views/Partials/FooterPartial.cshtml
@@ -1,48 +1,22 @@
 ﻿
 <div class="footer">
     <div class="container">
-        <div class="col-md-3 footer-grid">
-            <h3>About Us</h3>
-            <p>
-                Nam libero tempore, cum soluta nobis est eligendi
-                optio cumque nihil impedit quo minus id quod maxime
-                placeat facere possimus.
-            </p>
-        </div>
+        
+        @await Component.InvokeAsync("AboutList")
         <div class="col-md-3 footer-grid ">
-            <h3>Menu</h3>
+            <h3>Səhifələr</h3>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="kitchen.html">Kitchen</a></li>
-                <li><a href="care.html">Personal Care</a></li>
-                <li><a href="hold.html">Household</a></li>
-                <li><a href="codes.html">Short Codes</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/Home/Index/">Ana Səhifə</a></li>
+                <li><a href="/About/Index/">Haqqımızda</a></li>
+                <li><a href="/Contact/Index/">Bizimlə Əlaqə</a></li>
+                <li><a href="/Login/SignIn/">Daxil ol</a></li>
+                <li><a href="/Login/SignUp/">Qeydiyyat</a></li>
             </ul>
         </div>
-        <div class="col-md-3 footer-grid ">
-            <h3>Customer Services</h3>
-            <ul>
-                <li><a href="shipping.html">Shipping</a></li>
-                <li><a href="terms.html">Terms & Conditions</a></li>
-                <li><a href="faqs.html">Faqs</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="offer.html">Online Shopping</a></li>
-
-            </ul>
-        </div>
-        <div class="col-md-3 footer-grid">
-            <h3>My Account</h3>
-            <ul>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="register.html">Register</a></li>
-                <li><a href="wishlist.html">Wishlist</a></li>
-
-            </ul>
-        </div>
+        @await Component.InvokeAsync("FooterCategoryList")
         <div class="clearfix"></div>
         <div class="footer-bottom">
-            <h2><a href="index.html"><b>T<br>H<br>E</b>Big Store<span>The Best Supermarket</span></a></h2>
+            <h2><a href="/Home/Index/">Big Store<span>Onlayn Super Market</span></a></h2>
             <p class="fo-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
             <ul class="social-fo">
                 <li><a href="#" class=" face"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
@@ -50,22 +24,10 @@
                 <li><a href="#" class=" pin"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
                 <li><a href="#" class=" dri"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
             </ul>
-            <div class=" address">
-                <div class="col-md-4 fo-grid1">
-                    <p><i class="fa fa-home" aria-hidden="true"></i>12K Street , 45 Building Road Canada.</p>
-                </div>
-                <div class="col-md-4 fo-grid1">
-                    <p><i class="fa fa-phone" aria-hidden="true"></i>+1234 758 839 , +1273 748 730</p>
-                </div>
-                <div class="col-md-4 fo-grid1">
-                    <p><a href="mailto:info@example.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>info@example1.com</a></p>
-                </div>
-                <div class="clearfix"></div>
-
-            </div>
+            @await Component.InvokeAsync("ContactList")
         </div>
         <div class="copy-right">
-            <p> &copy; 2016 Big store. All Rights Reserved | Design by  <a href="http://w3layouts.com/"> W3layouts</a></p>
+            <p> &copy; @DateTime.Now.Year Big store. Bütün hüquqlar qorunur | Design by  <a href="https://github.com/ArizCefDev"> Ariz Ceferli</a></p>
         </div>
     </div>
 </div>
