--- a/Bigstore.com/Views/Admin/Index.cshtml
+++ b/Bigstore.com/Views/Admin/Index.cshtml
@@ -9,46 +9,46 @@
 		<div class="col_3">
 			<div class="col-md-3 widget widget1">
 				<div class="r3_counter_box">
-					<i class="pull-left fa fa-dollar icon-rounded"></i>
+					<i class="pull-left fa fa-bars icon-rounded"></i>
 					<div class="stats">
-						<h5><strong>$452</strong></h5>
-						<span>Total Revenue</span>
+						<h5><strong>@ViewBag.category</strong></h5>
+						<span>Ümumi Kateqoriya sayı</span>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-3 widget widget1">
 				<div class="r3_counter_box">
-					<i class="pull-left fa fa-laptop user1 icon-rounded"></i>
+					<i class="pull-left fa fa-envelope user1 icon-rounded"></i>
 					<div class="stats">
-						<h5><strong>$1019</strong></h5>
-						<span>Online Revenue</span>
+						<h5><strong>@ViewBag.message</strong></h5>
+						<span>Ümumi Mesajların sayı</span>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-3 widget widget1">
 				<div class="r3_counter_box">
-					<i class="pull-left fa fa-money user2 icon-rounded"></i>
+					<i class="pull-left fa fa-shopping-cart user2 icon-rounded"></i>
 					<div class="stats">
-						<h5><strong>$1012</strong></h5>
-						<span>Expenses</span>
+						<h5><strong>@ViewBag.products</strong></h5>
+						<span>Ümumi Məhsul sayı</span>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-3 widget widget1">
 				<div class="r3_counter_box">
-					<i class="pull-left fa fa-pie-chart dollar1 icon-rounded"></i>
+					<i class="pull-left fa fa-sort-asc dollar1 icon-rounded"></i>
 					<div class="stats">
-						<h5><strong>$450</strong></h5>
-						<span>Expenditure</span>
+						<h5><strong>@ViewBag.discountProduct</strong></h5>
+						<span>Endirimli Məhsul sayı</span>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-3 widget">
 				<div class="r3_counter_box">
-					<i class="pull-left fa fa-users dollar2 icon-rounded"></i>
+					<i class="pull-left fa fa-sort-desc dollar2 icon-rounded"></i>
 					<div class="stats">
-						<h5><strong>1450</strong></h5>
-						<span>Total Users</span>
+						<h5><strong>@ViewBag.product</strong></h5>
+						<span>Endirim Olmayan Məhsul sayı</span>
 					</div>
 				</div>
 			</div>
