--- a/Bigstore.com/Views/AdminPartials/SideBarPartial.cshtml
+++ b/Bigstore.com/Views/AdminPartials/SideBarPartial.cshtml
@@ -47,6 +47,11 @@
                         <i class="fa fa-user"></i> <span>İstifadəçilər</span>
                     </a>
                 </li>
+                <li class="treeview">
+                    <a href="/Home/Index/">
+                        <i class="fa fa-home"></i> <span>Sayta keç</span>
+                    </a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
