--- a/Bigstore.com/Views/Login/SignUp.cshtml
+++ b/Bigstore.com/Views/Login/SignUp.cshtml
@@ -12,17 +12,17 @@
 			<form method="post">
 				<div class="key">
 					<i class="fa fa-user" aria-hidden="true"></i>
-					<input type="text"  asp-for="Username" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Username';}" required="">
+					<input type="text"  asp-for="Username"  required="">
 					<div class="clearfix"></div>
 				</div>
 				
 				<div class="key">
 					<i class="fa fa-lock" aria-hidden="true"></i>
-					<input type="password"  asp-for="Password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Password';}" required="">
+					<input type="password"  asp-for="Password" required="">
 					<div class="clearfix"></div>
 				</div>
 				
-				<input type="submit" value="Submit">
+				<input type="submit" value="Qeydiyyatdan keç">
 			</form>
 		</div>
 
