--- a/Bigstore.com/Views/Offer/Index.cshtml
+++ b/Bigstore.com/Views/Offer/Index.cshtml
@@ -46,7 +46,7 @@
                                             <div class="clearfix"></div>
                                         </div>
                                         <div class="add">
-                                            <button class="btn btn-danger my-cart-btn my-cart-b " data-id="1" data-name="Moong" data-summary="summary 1" data-price="1.50" data-quantity="1" data-image="images/of.png">Add to Cart</button>
+                                            <button class="btn btn-danger my-cart-btn my-cart-b " data-id="1" data-name="Moong" data-summary="summary 1" data-price="1.50" data-quantity="1" data-image="images/of.png">Karta əlavə et</button>
                                         </div>
 
                                     </div>
