--- a/Bigstore.com/Views/Admin/ProductAdd.cshtml
+++ b/Bigstore.com/Views/Admin/ProductAdd.cshtml
@@ -46,7 +46,7 @@
                        
                         <div class="form-group">
                             <label for="exampleInputEmail1">Kateqoriya</label>
-                            <input type="text" asp-for="CategoryID" class="form-control" id="exampleInputEmail1" placeholder="Məlumatı daxil edin">
+                            @Html.DropDownListFor(x=>x.CategoryID,(IEnumerable<SelectListItem>) ViewBag.c,new {@class="form-control"})
                         </div>
 
                         <button type="submit" class="btn btn-default">Əlavə et</button>
