--- a/Bigstore.com/Views/Partials/NavBarPartial.cshtml
+++ b/Bigstore.com/Views/Partials/NavBarPartial.cshtml
@@ -34,6 +34,10 @@
                         {
                             <li><a href="/Admin/Index/" class="hyper"> <span>Admin</span></a></li>
                         }
+                        @if (User.IsInRole("Admin") || User.IsInRole("User"))
+                        {
+                            <li><a href="/Login/LogOut/" class="hyper"> <span>Çıxış et</span></a></li>
+                        }
                     </ul>
                 </div>
             </nav>
