--- a/Bigstore.com/Views/Shared/_HomeLayout.cshtml
+++ b/Bigstore.com/Views/Shared/_HomeLayout.cshtml
@@ -6,7 +6,7 @@
 <html>
 <partial name="~/Views/Partials/HeaderPartial.cshtml" />
 <body>
-    
+
     <partial name="~/Views/Partials/NavBarPartial.cshtml" />
 
     <partial name="~/Views/Partials/SliderPartial.cshtml" />
@@ -20,37 +20,6 @@
     <partial name="~/Views/Partials/ScriptPartial.cshtml" />
 
     <!-- product -->
-    <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content modal-info">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                </div>
-                <div class="modal-body modal-spa">
-                    <div class="col-md-5 span-2">
-                        <div class="item">
-                            <img src="~/Tema/images/of.png" class="img-responsive" alt="">
-                        </div>
-                    </div>
-                    <div class="col-md-7 span-1 ">
-                        <h3>Moong(1 kg)</h3>
-                        <p class="in-para"> There are many variations of passages of Lorem Ipsum.</p>
-                        <div class="price_single">
-                            <span class="reducedfrom "><del>$2.00</del>$1.50</span>
-
-                            <div class="clearfix"></div>
-                        </div>
-                        <h4 class="quick">Quick Overview:</h4>
-                        <p class="quick_desc"> Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; es</p>
-                        <div class="add-to">
-                            <button class="btn btn-danger my-cart-btn my-cart-btn1 " data-id="1" data-name="Moong" data-summary="summary 1" data-price="1.50" data-quantity="1" data-image="images/of.png">Add to Cart</button>
-                        </div>
-                    </div>
-                    <div class="clearfix"> </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
+    @await Component.InvokeAsync("DetailList" , new {id=5})
 </body>
 </html>
