--- a/Bigstore.com/Views/Shared/_HomeLayout.cshtml
+++ b/Bigstore.com/Views/Shared/_HomeLayout.cshtml
@@ -20,6 +20,36 @@
     <partial name="~/Views/Partials/ScriptPartial.cshtml" />
 
     <!-- product -->
-    @await Component.InvokeAsync("DetailList" , new {id=5})
+    <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content modal-info">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                </div>
+                <div class="modal-body modal-spa">
+                    <div class="col-md-5 span-2">
+                        <div class="item">
+                            <img src="/Tema/images/of17.png" class="img-responsive" alt="">
+                        </div>
+                    </div>
+                    <div class="col-md-7 span-1 ">
+                        <h3>Title</h3>
+                        <div class="price_single">
+                            <span class="reducedfrom "><del>11.99 azn </del> 15.99 azn</span>
+
+                            <div class="clearfix"></div>
+                        </div>
+                        <h4 class="quick">Məhsul haqqında:</h4>
+                        <p class="quick_desc"> Text</p>
+                        <div class="add-to">
+                            <button class="btn btn-danger my-cart-btn my-cart-btn1 " data-id="1" data-name="Title" data-summary="summary 1" data-price="Price" data-quantity="1" data-image="/Tema/images/of17.png">Karta əlavə et</button>
+                        </div>
+                    </div>
+                    <div class="clearfix"> </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
